[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_codeact"

version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-sandbox>=0.0.6",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.4",
]
[tool.setuptools.packages.find] # 自动发现所有包，最简单的配置
