[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_codeact"

version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-sandbox>=0.0.6",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.4",
    "cloudpss>=4.5.21",
    "dotenv>=0.9.9",
    "igraph>=0.11.9",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "scipy>=1.16.0",
]
[tool.setuptools.packages.find] # 自动发现所有包，最简单的配置

[dependency-groups]
dev = [
    "langgraph>=0.5.3",
]
